--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/appacademy-starters/data-structures-hash-tables-starter#readme",
   "dependencies": {
     "chai": "^4.3.4",
-    "mocha": "^8.3.2"
+    "js-sha256": "^0.10.1",
+    "mocha": "^10.2.0",
+    "sha256": "^0.2.0"
   }
 }
